# qut-aiml-hackathon

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  HANDOFF.md  LICENSE  README.md  docker-compose.yml
client/: eslint.config.js  index.html  package-lock.json  package.json  prettier.config.js  tsconfig.tsbuildinfo  vite.config.ts
client/src/: App.tsx
client/src/router/: index.ts
client/src/state/: store.ts
client/src/ui/: CreateScreen.tsx  DebriefScreen.tsx  EmojiConfetti.tsx  EventBanner.tsx  GameScreen.tsx  HostScreen.tsx  JoinScreen.tsx  LobbyScreen.tsx  NewsTicker.tsx  PriceChart.tsx  QRCode.tsx  SummaryScreen.tsx  WaitingScreen.tsx  WelcomeScreen.tsx
client/src/ws/: protocol.ts  useWs.ts
scripts/: deploy.sh  dev-local.sh  provision-infrastructure.sh
server/: Cargo.toml
server/src/: config.rs  error.rs  main.rs
server/src/agents/: market_maker.rs  mod.rs  npc_owner.rs
server/src/llm/: debrief.rs  mod.rs  narrator.rs
server/src/market/: book.rs  matching.rs  mod.rs  options.rs  portfolio.rs
server/src/net/: admin.rs  gateway.rs  mod.rs  protocol.rs  sessions.rs
server/src/sim/: actions.rs  aura.rs  entities.rs  events.rs  mod.rs  world.rs
server/static/: index.html
server/static/assets/: index-BPi6CikE.js  index-Dgj5M2BJ.js  index-nIcnexAw.js
terraform/: main.tf  outputs.tf  providers.tf  variables.tf
