[package]
name = "aura-farmers"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
dashmap = "6"
rand = "0.10.0"
rand_distr = "0.6.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
rust_decimal = { version = "1.41.0", features = ["serde-str"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["full"] }
tokio-tungstenite = "0.29.0"
tower-http = { version = "0.6.8", features = ["fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
rust_decimal_macros = "1.40.0"
